Ajustes na rota de adição de pedidos
